fix beli course and docs
