# app.js
@@ -23,6 +23,7 @@ const mentor = require('./routes/mentor.routes')
 const mentorCourse = require('./routes/mentor-course.routes');
 const notification = require('./routes/notification.routes');
 const promo = require('./routes/promo.routes')
+const admin = require('./routes/admin.routes')
 
 app.use('/auth', userRouter);
 app.use('/profile', profileRouter);
@@ -37,7 +38,7 @@ app.use('/mentor', mentor);
 app.use('/mentor-course', mentorCourse);
 app.use('/notification', notification);
 app.use('/promo', promo)
-
+app.use('/admin', admin)
 app.use('/', (req, res) => {
   try {
     const welcomeMessage = {
