# controllers/course.controllers.js
@@ -32,9 +32,6 @@ const getAllCourse = async (req, res, next) => {
             orderBy = sort && order ? { [sort]: order } : undefined;
         }
 
-        console.log('conditions');
-        console.log(conditions);
-
         let { limit = 10, page = 1 } = req.query;
         limit = Number(limit);
         page = Number(page);
@@ -119,7 +116,7 @@ const getCoursebyId = async(req,res,next)=>{
                 title: true,
                 deskripsi:true,
                 kode_kelas:true,
-                kategori_id: true,
+                url_gc_tele:true,
                 premium: true,
                 harga: true,
                 level:true,
@@ -133,7 +130,12 @@ const getCoursebyId = async(req,res,next)=>{
                         name:true
                     }
                 },
-                
+                Chapter:{
+                    select:{
+                        title:true,
+                        Video:true
+                    }
+                }
             }
         })
         if(!course) return res.json("Course isnt registered")
@@ -188,6 +190,11 @@ const addCourse = async(req,res,next)=>{
                     select:{
                         title: true,
                 },
+                Mentor:{
+                    select:{
+                        name:true
+                    }
+                }
             }
         }})
 
@@ -200,7 +207,7 @@ const addCourse = async(req,res,next)=>{
 
         res.status(200).json({
             success:true,
-            data:{course}
+            data:{course, mentorCourse}
             
         })
     } catch (error) {
@@ -228,32 +235,41 @@ const deleteCoursebyId = async(req,res,next)=>{
 
 const beliCourse = async(req,res,next)=>{
     try {
-        let {course_id} = req.body
-        let account = req.user
-        course_id = parseInt(course_id,10)
-        let course = await prisma.course.findUnique({where:{course_id}})
-        if(!course) return res.status(404).json("Course isnt registered")
+        let account = req.user;
+        let { course_id , metode_pembayaran=""} = req.body;
 
-        let riwayat = await prisma.riwayat_transaksi.create({
-            data:{
+        let course = await prisma.course.findUnique({
+            where: {
+                course_id,
+            },
+        });
+
+        if (!course) return res.json('Course is not registered');
+
+        let payment = await prisma.riwayat_Transaksi.create({
+            data: {
                 account_id: account.account_id,
                 course_id,
-                status: "Menunggu Pembayaran"
-            }
-        })
+                tanggal_pembayaran: new Date(Date.now()),
+                metode_pembayaran,
+                status: 'Menunggu Pembayaran',
+            },
+        });
 
+        // Menambahkan entri di tabel User_course
         let userCourse = await prisma.user_course.create({
-            data:{
+            data: {
                 account_id: account.account_id,
-                course_id
-            }
-        })
+                course_id,
+            },
+        });
+
         res.status(200).json({
-            success:true,
-            data:{riwayat,userCourse}
-        })
+            success: true,
+            data: { payment, userCourse },
+        });
     } catch (error) {
-        next(error)
+        next(error);
     }
 
 }
